// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render Button with styles 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <button
-     class=\\"bg-gradient-purple text-white p-4 text-xl uppercase font-bold rounded hover:bg-gradient-purple-dark mt-4\\"
+     class=\\"bg-gradient-purple text-white p-4 text-xl uppercase font-bold rounded hover:bg-gradient-purple-dark \\"
    >
      Test
    </button>
  </DocumentFragment>"
`;

exports[`Button should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bg-gradient-purple text-white p-4 text-xl uppercase font-bold rounded hover:bg-gradient-purple-dark "
  >
    Test
  </button>
</DocumentFragment>
`;
